--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<td >
 			<table border="1">
 				<th >
-					<td colspan="2">Nested table 2</td>
+					<td colspan="2">Nested Table 2</td>
 				</th>
 				<tbody>
 					<tr >
@@ -27,7 +27,7 @@
 			<table border="1">
 				<th>
 					<td >
-						Nested Table1
+						Nested Table 1
 					</td>
 				</th>
 				<tbody>
@@ -49,7 +49,7 @@
 		<td>
 			<table border="1">
 				<th >
-					<td colspan="2">Nested table 3</td>
+					<td colspan="2">Nested Table 3</td>
 				</th>
 				<tbody>
 					<tr >
@@ -62,7 +62,7 @@
 		<td>
 			<table border="1">
 				<th >
-					<td colspan="2">Nested table 4</td>
+					<td colspan="2">Nested Table 4</td>
 				</th>
 				<tbody>
 					<tr >
