--- a/main.html
+++ b/main.html
@@ -12,9 +12,9 @@
 	<tr>
 		<td >
 			<table border="1">
-				<th >
+				<thead >
 					<td colspan="2">Nested Table 2</td>
-				</th>
+				</thead>
 				<tbody>
 					<tr >
 						<td>column 1</td>
@@ -25,11 +25,11 @@
 		</td>
 		<td>
 			<table border="1">
-				<th>
+				<thead>
 					<td >
 						Nested Table 1
 					</td>
-				</th>
+				</thead>
 				<tbody>
 					<tr>
 						<td>
@@ -48,9 +48,9 @@
 	<tr>
 		<td>
 			<table border="1">
-				<th >
+				<thead >
 					<td colspan="2">Nested Table 3</td>
-				</th>
+				</thead>
 				<tbody>
 					<tr >
 						<td><a href="goodle.com">Nested table</a></td>
@@ -61,9 +61,9 @@
 		</td>
 		<td>
 			<table border="1">
-				<th >
+				<thead >
 					<td colspan="2">Nested Table 4</td>
-				</th>
+				</thead>
 				<tbody>
 					<tr >
 						<td>Html</td>
