--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<td >
 			<table border="1">
 				<thead >
-					<td colspan="2">Nested Table 2</td>
+					<th colspan="2">Nested Table 2</th>
 				</thead>
 				<tbody>
 					<tr >
@@ -26,9 +26,9 @@
 		<td>
 			<table border="1">
 				<thead>
-					<td >
+					<th >
 						Nested Table 1
-					</td>
+					</th>
 				</thead>
 				<tbody>
 					<tr>
@@ -49,7 +49,7 @@
 		<td>
 			<table border="1">
 				<thead >
-					<td colspan="2">Nested Table 3</td>
+					<th colspan="2">Nested Table 3</th>
 				</thead>
 				<tbody>
 					<tr >
@@ -62,7 +62,7 @@
 		<td>
 			<table border="1">
 				<thead >
-					<td colspan="2">Nested Table 4</td>
+					<th colspan="2">Nested Table 4</th>
 				</thead>
 				<tbody>
 					<tr >
