--- a/main.html
+++ b/main.html
@@ -17,8 +17,12 @@
 				</thead>
 				<tbody>
 					<tr >
-						<td>column 1</td>
-						<td>column 2</td>
+						<th>column 1</th>
+						<th>column 2</th>
+					</tr>
+					<tr>
+						<td>abc</td>
+						<td>def</td>
 					</tr>
 				</tbody>
 			</table>
