--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
 				</thead>
 				<tbody>
 					<tr >
-						<th>column 1</th>
-						<th>column 2</th>
+						<th>Column 1</th>
+						<th>Column 2</th>
 					</tr>
 					<tr>
 						<td>abc</td>
@@ -38,9 +38,9 @@
 					<tr>
 						<td>
 							<ul>
-								<li>list item </li>
-								<li> list item </li>
-								<li> list item </li>
+								<li>List item </li>
+								<li> List item </li>
+								<li> List item </li>
 							</ul>
 						</td>
 					</tr>
@@ -70,7 +70,7 @@
 				</thead>
 				<tbody>
 					<tr >
-						<td>Html</td>
+						<td>HTML</td>
 						
 					</tr>
 				</tbody>
